--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">GamesProject</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="server_error_message">Server erro</string>
+    <string name="no_internet_connection_error_message">No internet connection</string>
+    <string name="bad_response_error_message">Bad response</string>
+    <string name="unexpected_error_error_message">Unexpected error</string>
 </resources>
